5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1593_2426.log
== TEST (2019-03-26 11:20:35) 
-- CODE:
t = float(input("tempo gasto: ")
v = float(input("velociade media: "))
			 
litro1 = k12
			 
d = t * v
q = d
			 
print(d)
print(q)
-- ERROR:
File "XXXX", line 2
    v = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:20:58) 
-- CODE:
t = float(input("tempo gasto: ")
v = int(input("velociade media: "))
			 
litro1 = k12
			 
d = t * v
q = d
			 
print(d)
print(q)
-- ERROR:
File "XXXX", line 2
    v = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:21:13) 
-- CODE:
t = float(input("tempo gasto: ")
v = float(input("velociade media: "))
			 
litro1 = k12
			 
d = t * v
q = d
			 
print(d)
print(q)
-- ERROR:
File "XXXX", line 2
    v = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:21:21) 
-- CODE:
t = float(input("tempo gasto: ")
v = float(input("velociade media: "))
			 	 
d = t * v
q = d
			 
print(d)
print(q)
-- ERROR:
File "XXXX", line 2
    v = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:22:02) 
-- CODE:

t = float(input("tempo gasto: ")
v = float(input("velociade media: "))
			 	 
d = t * v
q = d
			 
print(d)
print(q)
-- EXECUTION TIME:
0.182585
-- ERROR:
  File "/home/codebench/codes/1593/2426/main.py", line 3
    v = float(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:22:04) 
-- CODE:

t = float(input("tempo gasto: ")
v = float(input("velociade media: "))
			 	 
d = t * v
q = d
			 
print(d)
print(q)
-- ERROR:
File "XXXX", line 3
    v = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:22:19) 
-- CODE:
t = float(input("tempo gasto: "))
v = float(input("velociade media: "))
			 	 
d = t * v
q = d
			 
print(d)
print(q)
-- OUTPUT:
900.0
900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:23:07) 
-- CODE:
t = float(input("tempo gasto: "))
v = float(input("velociade media: "))
			 	 
d = t * v
q = d * 1000
			 
print(d)
print()
-- OUTPUT:
900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:23:27) 
-- CODE:
t = float(input("tempo gasto: "))
v = float(input("velociade media: "))
			 	 
d = t * v
q = d * 1000
			 
print(d)
print(q)
-- OUTPUT:
900.0
900000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:24:31) 
-- CODE:
t = float(input("tempo gasto: "))
v = float(input("velociade media: "))
			 	 
d = t * v
q = d / 12
			 
print(d)
print(q)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:24:43) 
-- CODE:
t = float(input("tempo gasto: "))
v = float(input("velociade media: "))
			 	 
d = t * v
q = d / 12
			 
print(d)
print(q)
-- EXECUTION TIME:
0.144181
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
